tests/machine/x/c/left_join.error
exit status 1
/workspace/mochi/tests/machine/x/c/left_join.c: In function ‘_mochi_main’:
/workspace/mochi/tests/machine/x/c/left_join.c:72:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
   72 |       result_item_list_t_create(orders_len * customers_len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/left_join.c:72:7: error: invalid initializer
/workspace/mochi/tests/machine/x/c/left_join.c:102:9: warning: implicit declaration of function ‘memcmp’ [-Wimplicit-function-declaration]
  102 |     if (memcmp(&entry.customer, &(customer_t){0}, sizeof(customer_t)) == 0) {
      |         ^~~~~~
/workspace/mochi/tests/machine/x/c/left_join.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘memcmp’
    3 | #include <stdlib.h>
  +++ |+#include <string.h>
    4 | 
