tests/machine/x/c/left_join.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int id;
  const char *name;
} customer_t;
typedef struct {
  int len;
  customer_t *data;
} customer_list_t;
customer_list_t create_customer_list(int len) {
  customer_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(customer_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int id;
  int customer_id;
  int total;
} order_t;
typedef struct {
  int len;
  order_t *data;
} order_list_t;
order_list_t create_order_list(int len) {
  order_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(order_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int order_id;
  customer_t customer;
  int total;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  customer_t customers[] = {(customer_t){.id = 1, .name = "Alice"},
                            (customer_t){.id = 2, .name = "Bob"}};
  int customers_len = sizeof(customers) / sizeof(customers[0]);
  order_t orders[] = {(order_t){.id = 100, .customer_id = 1, .total = 250},
                      (order_t){.id = 101, .customer_id = 3, .total = 80}};
  int orders_len = sizeof(orders) / sizeof(orders[0]);
  result_item_list_t tmp1 =
      result_item_list_t_create(orders_len * customers_len);
  int tmp2 = 0;
  for (int tmp3 = 0; tmp3 < orders_len; tmp3++) {
    order_t o = orders[tmp3];
    int tmp5 = 0;
    for (int tmp4 = 0; tmp4 < customers_len; tmp4++) {
      customer_t c = customers[tmp4];
      if (!(o.customer_id == c.id)) {
        continue;
      }
      tmp5 = 1;
      tmp1.data[tmp2] =
          (result_item_t){.order_id = o.id, .customer = c, .total = o.total};
      tmp2++;
    }
    if (!tmp5) {
      customer_t c = (customer_t){0};
      tmp1.data[tmp2] =
          (result_item_t){.order_id = o.id, .customer = c, .total = o.total};
      tmp2++;
    }
  }
  tmp1.len = tmp2;
  result_item_list_t result = tmp1;
  printf("--- Left Join ---\n");
  for (int tmp6 = 0; tmp6 < result.len; tmp6++) {
    result_item_t entry = result.data[tmp6];
    printf("%s ", "Order");
    printf("%d ", entry.order_id);
    printf("%s ", "customer");
    if (memcmp(&entry.customer, &(customer_t){0}, sizeof(customer_t)) == 0) {
      printf("<nil>");
    } else {
      printf("map[");
      printf("id:");
      printf("%d", entry.customer.id);
      printf(" ");
      printf("name:");
      printf("%s", entry.customer.name);
      printf("]");
    }
    printf(" ");
    printf("%s ", "total");
    printf("%d\n", entry.total);
  }
  return 0;
}
int main() { return _mochi_main(); }
